--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen-type": "npx supabase gen types typescript --project-id \"sjqbafovqiydkndodbsb\" --schema public > app/types/database.types.ts"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,6 +35,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
+    "supabase": "^2.6.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
