--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "es-hangul": "^2.3.0",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.0",
     "react": "^19.0.0",
