--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-table": "^8.21.2",
-    "axios": "^1.7.9",
+    "@vercel/speed-insights": "^1.2.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "es-hangul": "^2.3.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.474.0",
-    "next": "15.1.0",
+    "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
