--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "gen-type": "npx supabase gen types typescript --project-id \"sjqbafovqiydkndodbsb\" --schema public > app/types/database.types.ts"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.3",
+    "@codemirror/language": "^6.11.0",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.36.7",
     "@radix-ui/react-checkbox": "^1.2.2",
     "@radix-ui/react-collapsible": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -23,10 +28,13 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-table": "^8.21.2",
+    "@types/react-window": "^1.8.8",
+    "@uiw/react-codemirror": "^4.23.12",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "codemirror": "^6.0.1",
     "date-fns": "^4.1.0",
     "es-hangul": "^2.3.0",
     "framer-motion": "^12.5.0",
@@ -37,6 +45,7 @@
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
+    "react-window": "^1.8.11",
     "swr": "^2.3.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
