--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-table": "^8.21.2",
+    "@types/react-window": "^1.8.8",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "es-hangul": "^2.3.0",
+    "es-toolkit": "^1.37.2",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.474.0",
     "next": "^15.1.0",
@@ -40,6 +42,7 @@
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
+    "react-window": "^1.8.11",
     "swr": "^2.3.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
