--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@reduxjs/toolkit": "^2.5.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-table": "^8.21.2",
     "@types/react-window": "^1.8.8",
