--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-table": "^8.21.2",
+    "@tanstack/react-virtual": "^3.13.9",
     "@types/react-window": "^1.8.8",
     "@uiw/react-codemirror": "^4.23.12",
     "@vercel/speed-insights": "^1.2.0",
