--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen-type": "npx supabase gen types typescript --project-id \"sjqbafovqiydkndodbsb\" --schema public > app/types/database.types.ts"
+    "gen-type": "npx supabase gen types typescript --project-id \"sjqbafovqiydkndodbsb\" --schema public > app/types/database.types.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.3",
@@ -61,13 +64,22 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-redux": "^7.1.34",
+    "babel-jest": "^30.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
+    "jest": "^30.0.0",
+    "jest-environment-jsdom": "^30.0.0",
     "postcss": "^8",
     "supabase": "^2.24.3",
     "tailwindcss": "^3.4.1",
