--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gen-type": "npx supabase gen types typescript --project-id \"sjqbafovqiydkndodbsb\" --schema public > app/types/database.types.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:test": "jest 2>&1 | tee test.txt"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.3",
