--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:test": "jest 2>&1 | tee test.txt"
+    "test:test": "jest 2>&1 | tee test.txt",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.3",
