--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "babel-jest": "^30.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
+    "husky": "^9.1.7",
     "jest": "^30.0.0",
     "jest-environment-jsdom": "^30.0.0",
     "postcss": "^8",
