--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-window": "^1.8.11",
     "recharts": "^2.15.3",
