feat: 리플레이 분석 페이지 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/types/*": ["./app/types/*"]
     },
     "typeRoots": ["./node_modules/@types", "./app/types"]
   },
