--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "husky": "^9.1.7",
     "jest": "^30.0.0",
     "jest-environment-jsdom": "^30.0.0",
+    "jest-junit": "^16.0.0",
     "postcss": "^8",
     "semantic-release": "^24.2.7",
     "supabase": "^2.24.3",
