feat: supabase에서 in사용시 자주뜨는 버그수정을 위해 유틸함수 추가 및 관리자 단어대량추가 버그 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "@/types/*": ["./app/types/*"]
+      "@/types/*": ["./app/types/*"],
+      "@/components/*": ["./app/components/*"],
+      "@/lib/*": ["./app/lib/*"],
     },
     "typeRoots": ["./node_modules/@types", "./app/types"]
   },
